test/must_fail/api/must_fail_file_exists_two_args.ref
error: file_exists(path) require exactly 1 arguments but 2 was given
  [must_fail_file_exists_two_args.ngjs:0:0] in <anonymous>()
    file_exists('asdf', 2);
    ^

hint: function 'file_exists(path)' was called with 2 arguments
hint: argument #0 was asdf (string)
hint: argument #1 was 2 (number)

Stack trace (1 frames):
  [must_fail_file_exists_two_args.ngjs:0:0] in <anonymous>()
    file_exists('asdf', 2);
    ^

exit(7)
