test/must_fail/api/must_fail_file_exists_two_args.ngjs
#!/usr/bin/env ngspicejs
// File exists only 1 arg
// linter: ngspicejs-lint
"use strict";

file_exists('asdf', 2);

